--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+html {
+  font-size: 10px;
+}
+
+body {
+  background: url(img/bg2.png);
+  background-size: cover;
+  color: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.6rem;
+}
+
 #x2 {
   background-color: black;
   color: white;
@@ -24,4 +36,48 @@
   color: white;
   padding: 10px 20px;
   cursor: pointer;
+}
+
+.container {
+  max-width: 110rem;
+  margin: 0 auto;
+  margin-top: 5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+h1 {
+  margin-top: 5rem;
+  max-width: 40rem;
+  margin: 0 auto;
+  text-align: center;
+  color: #F3D66D;
+  padding: 2rem;
+  background: #000;
+}
+
+.blue {
+  color: #3DA1D8;
+}
+
+.cookie {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.score {
+  font-size: 3rem;
+  margin-top: 1rem;
+
+}
+
+.score p {
+  margin: 0;
+}
+
+.right {
+  padding-top: 5rem;
+  margin-right: 12rem;
+  color: #000;
 }
