--- a/style.css
+++ b/style.css
@@ -13,29 +13,37 @@ body {
 #x2 {
   background-color: black;
   color: white;
-  padding: 10px 20px;
+  padding: 2rem 4rem;
   cursor: pointer;
+  font-size: 2rem;
+  margin-top: 1rem;
 }
 
 #x5 {
   background-color: black;
   color: white;
-  padding: 10px 20px;
+  padding: 2rem 4rem;
   cursor: pointer;
+  font-size: 2rem;
+  margin-top: 1rem;
 }
 
 #auto {
   background-color: black;
   color: white;
-  padding: 10px 20px;
+  padding: 2rem 4rem;
   cursor: pointer;
+  font-size: 2rem;
+  margin-top: 1rem;
 }
 
 #bonus {
   background-color: black;
   color: white;
-  padding: 10px 20px;
+  padding: 2rem 4rem;
   cursor: pointer;
+  font-size: 2rem;
+  margin-top: 1rem;
 }
 
 .container {
@@ -47,7 +55,7 @@ body {
 }
 
 h1 {
-  margin-top: 5rem;
+  margin-top: 1rem;
   max-width: 40rem;
   margin: 0 auto;
   text-align: center;
@@ -80,4 +88,8 @@ h1 {
   padding-top: 5rem;
   margin-right: 12rem;
   color: #000;
+}
+
+.right p {
+  font-size: 2rem;
 }
