--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 html {
   font-size: 10px;
 }
@@ -6,12 +8,12 @@ body {
   background: url(img/bg2.png);
   background-size: cover;
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.6rem;
 }
 
 #x2 {
-  background-color: black;
+  background-color: #3DA1D8;
   color: white;
   padding: 2rem 4rem;
   cursor: pointer;
@@ -20,7 +22,7 @@ body {
 }
 
 #x5 {
-  background-color: black;
+  background-color: #3DA1D8;
   color: white;
   padding: 2rem 4rem;
   cursor: pointer;
@@ -29,7 +31,7 @@ body {
 }
 
 #auto {
-  background-color: black;
+  background-color: #3DA1D8;
   color: white;
   padding: 2rem 4rem;
   cursor: pointer;
@@ -38,7 +40,7 @@ body {
 }
 
 #bonus {
-  background-color: black;
+  background-color: #3DA1D8;
   color: white;
   padding: 2rem 4rem;
   cursor: pointer;
@@ -47,7 +49,7 @@ body {
 }
 
 .container {
-  max-width: 110rem;
+  max-width: 120rem;
   margin: 0 auto;
   margin-top: 5rem;
   display: flex;
@@ -55,13 +57,12 @@ body {
 }
 
 h1 {
-  margin-top: 1rem;
   max-width: 40rem;
   margin: 0 auto;
   text-align: center;
-  color: #F3D66D;
+  color: #000;
   padding: 2rem;
-  background: #000;
+  margin-top: -3rem;
 }
 
 .blue {
@@ -85,11 +86,17 @@ h1 {
 }
 
 .right {
-  padding-top: 5rem;
+  padding-top: 3rem;
   margin-right: 12rem;
   color: #000;
 }
 
 .right p {
   font-size: 2rem;
+}
+
+.btn-container {
+  display: flex;
+  gap: 3rem;
+  margin-top: 4rem;
 }
